Successfully fetching all of NYSE symbols and searching them for desired numbers. Still need to add the percent of the 52 wk range.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,14 @@
 Welcome to SkalaStock!
-
+<br />
 <%= form_tag("/search", method: "get") do %>
   <%= label_tag(:q, "Market cap:") %>
-  <%= text_field_tag(:q) %>
-  <%= label_tag(:r, "Dividend:") %>
-  <%= text_field_tag(:r) %>
-  <%= label_tag(:s, "PE Ratio:") %>
-  <%= text_field_tag(:s) %>
+  <%= text_field_tag(:q, nil, placeholder: "1,000,000,000") %>
+  <br />
+  <%= label_tag(:r, "PE Ratio:") %>
+  <%= text_field_tag(:r, nil, placeholder: "20") %>
+  <br />
+  <%= label_tag(:s, "Dividend:") %>
+  <%= text_field_tag(:s, nil, placeholder: "2.5") %>
+  <br />
   <%= submit_tag("Search") %>
 <% end %>
